cmake_minimum_required(VERSION 3.11)
project(chalk VERSION 0.1 LANGUAGES CXX)
add_library(chalk INTERFACE)
add_library(chalk::chalk ALIAS chalk)
target_include_directories(chalk INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include> $<INSTALL_INTERFACE:include/chalk>)
set_target_properties(chalk PROPERTIES PUBLIC_HEADER include/chalk/chalk.h)

install(TARGETS chalk EXPORT chalk PUBLIC_HEADER DESTINATION include/chalk)
install(EXPORT chalk NAMESPACE chalk:: DESTINATION lib/cmake/chalk)
export(TARGETS chalk NAMESPACE chalk:: FILE chalkConfig.cmake)
